Lab 02 - Building the Parser/cool.output
Terminals unused in grammar

   ERROR


State 11 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 135 conflicts: 9 shift/reduce
State 148 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class class_list

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature
    9             | feature_list feature
   10             | feature_list error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expr ';'

   14 formal_list: %empty
   15            | formal
   16            | formal_list ',' formal
   17            | formal_list ',' error

   18 formal: OBJECTID ':' TYPEID

   19 expr_list_comma_sep: %empty
   20                    | expr
   21                    | expr_list_comma_sep ',' expr
   22                    | expr_list_comma_sep ',' error

   23 expr_list_semicolon_sep: expr ';'
   24                        | expr_list_semicolon_sep expr ';'
   25                        | error ';'

   26 expr: OBJECTID ASSIGN expr
   27     | expr '.' OBJECTID '(' expr_list_comma_sep ')'
   28     | expr '@' TYPEID '.' OBJECTID '(' expr_list_comma_sep ')'
   29     | OBJECTID '(' expr_list_comma_sep ')'
   30     | IF expr THEN expr ELSE expr FI
   31     | WHILE expr LOOP expr POOL
   32     | '{' expr_list_semicolon_sep '}'
   33     | LET expr_let_body
   34     | CASE expr OF case_branch_list ESAC
   35     | NEW TYPEID
   36     | ISVOID expr
   37     | expr '+' expr
   38     | expr '-' expr
   39     | expr '*' expr
   40     | expr '/' expr
   41     | '~' expr
   42     | expr '<' expr
   43     | expr LE expr
   44     | expr '=' expr
   45     | NOT expr
   46     | '(' expr ')'
   47     | OBJECTID
   48     | INT_CONST
   49     | STR_CONST
   50     | BOOL_CONST

   51 expr_let_body: OBJECTID ':' TYPEID IN expr
   52              | OBJECTID ':' TYPEID ASSIGN expr IN expr
   53              | OBJECTID ':' TYPEID ',' expr_let_body
   54              | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let_body
   55              | error ',' expr_let_body

   56 case_branch_list: case_ ';'
   57                 | case_branch_list case_ ';'
   58                 | case_branch_list error ';'

   59 case_: OBJECTID ':' TYPEID DARROW expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 27 28 29 46
')' (41) 11 27 28 29 46
'*' (42) 39
'+' (43) 37
',' (44) 16 17 21 22 53 54 55
'-' (45) 38
'.' (46) 27 28
'/' (47) 40
':' (58) 11 12 13 18 51 52 53 54 59
';' (59) 4 5 6 10 11 12 13 23 24 25 56 57 58
'<' (60) 42
'=' (61) 44
'@' (64) 28
'{' (123) 4 5 11 32
'}' (125) 4 5 11 32
'~' (126) 41
error (256) 6 10 17 22 25 55 58
CLASS (258) 4 5
ELSE (259) 30
FI (260) 30
IF (261) 30
IN (262) 51 52
INHERITS (263) 5
LET (264) 33
LOOP (265) 31
POOL (266) 31
THEN (267) 30
WHILE (268) 31
CASE (269) 34
ESAC (270) 34
OF (271) 34
DARROW (272) 59
NEW (273) 35
ISVOID (274) 36
STR_CONST (275) 49
INT_CONST (276) 48
BOOL_CONST (277) 50
TYPEID (278) 4 5 11 12 13 18 28 35 51 52 53 54 59
OBJECTID (279) 11 12 13 18 26 27 28 29 47 51 52 53 54 59
ASSIGN (280) 13 26 52 54
NOT (281) 45
LE (282) 43
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9 10, on right: 4 5 9 10
feature (50)
    on left: 11 12 13, on right: 8 9
formal_list (51)
    on left: 14 15 16 17, on right: 11 16 17
formal (52)
    on left: 18, on right: 15 16
expr_list_comma_sep (53)
    on left: 19 20 21 22, on right: 21 22 27 28 29
expr_list_semicolon_sep (54)
    on left: 23 24 25, on right: 24 32
expr (55)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50, on right: 11 13 20 21 23 24 26 27 28 30 31
    34 36 37 38 39 40 41 42 43 44 45 46 51 52 54 59
expr_let_body (56)
    on left: 51 52 53 54 55, on right: 33 53 54 55
case_branch_list (57)
    on left: 56 57 58, on right: 34 57 58
case_ (58)
    on left: 59, on right: 56 57


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .

    $default  reduce using rule 1 (program)


State 5

    2 class_list: class .  [$end]
    3           | class . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 2 (class_list)

    class_list  go to state 9
    class       go to state 5


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class class_list .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 7 (feature_list)]
    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 14
    feature       go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 13

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature
   10             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 20

    feature  go to state 21


State 15

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 7 (feature_list)]
    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 22
    feature       go to state 15


State 17

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 24
    formal       go to state 25


State 18

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 26


State 19

   10 feature_list: feature_list error . ';'

    ';'  shift, and go to state 27


State 20

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 21

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature
   10             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 29

    feature  go to state 21


State 23

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


State 24

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   16 formal_list: formal_list . ',' formal
   17            | formal_list . ',' error

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 25

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 26

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 33
    ';'     shift, and go to state 34


State 27

   10 feature_list: feature_list error ';' .

    $default  reduce using rule 10 (feature_list)


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 30

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 31

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 37


State 32

   16 formal_list: formal_list ',' . formal
   17            | formal_list ',' . error

    error     shift, and go to state 38
    OBJECTID  shift, and go to state 23

    formal  go to state 39


State 33

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


State 34

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 37

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 55


State 38

   17 formal_list: formal_list ',' error .

    $default  reduce using rule 17 (formal_list)


State 39

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 40

   30 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 56


State 41

   33 expr: LET . expr_let_body

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    expr_let_body  go to state 59


State 42

   31 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 60


State 43

   34 expr: CASE . expr OF case_branch_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


State 44

   35 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 45

   36 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 63


State 46

   49 expr: STR_CONST .

    $default  reduce using rule 49 (expr)


State 47

   48 expr: INT_CONST .

    $default  reduce using rule 48 (expr)


State 48

   50 expr: BOOL_CONST .

    $default  reduce using rule 50 (expr)


State 49

   26 expr: OBJECTID . ASSIGN expr
   29     | OBJECTID . '(' expr_list_comma_sep ')'
   47     | OBJECTID .  [ELSE, FI, IN, LOOP, POOL, THEN, OF, LE, '<', '=', '+', '-', '*', '/', '@', '.', '}', ';', ')', ',']

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 47 (expr)


State 50

   45 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 66


State 51

   41 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


State 52

   32 expr: '{' . expr_list_semicolon_sep '}'

    error       shift, and go to state 68
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr_list_semicolon_sep  go to state 69
    expr                     go to state 70


State 53

   46 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 71


State 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   27 expr: expr . '.' OBJECTID '(' expr_list_comma_sep ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma_sep ')'
   37     | expr . '+' expr
   38     | expr . '-' expr
   39     | expr . '*' expr
   40     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 81


State 55

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 82


State 56

   27 expr: expr . '.' OBJECTID '(' expr_list_comma_sep ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma_sep ')'
   30     | IF expr . THEN expr ELSE expr FI
   37     | expr . '+' expr
   38     | expr . '-' expr
   39     | expr . '*' expr
   40     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 57

   55 expr_let_body: error . ',' expr_let_body

    ','  shift, and go to state 84


State 58

   51 expr_let_body: OBJECTID . ':' TYPEID IN expr
   52              | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   53              | OBJECTID . ':' TYPEID ',' expr_let_body
   54              | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let_body

    ':'  shift, and go to state 85


State 59

   33 expr: LET expr_let_body .

    $default  reduce using rule 33 (expr)


State 60
